--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,5 +1,6 @@
 html {
   height: 100%;
+  font-family: Roboto;
 }
 
 body {
@@ -23,24 +24,31 @@ body {
   flex-direction: column;
   padding-top: 25px;
 }
+.wrapper .header {
+  margin-bottom: 40px;
+}
 .wrapper .header .container {
   display: flex;
   justify-content: space-between;
 }
-.wrapper .header .container .head-logo-search {
+.wrapper .header .container .head-title-search {
   display: flex;
   align-items: center;
   width: 60%;
   justify-content: space-between;
 }
-.wrapper .header .container .head-logo-search .search {
+.wrapper .header .container .head-title-search .head-title {
+  font-size: 20px;
+  font-weight: 700;
+}
+.wrapper .header .container .head-title-search .search {
   background-color: #eaf1f1;
   width: 450px;
   border-radius: 32px;
   padding: 0 35px;
   box-sizing: border-box;
 }
-.wrapper .header .container .head-logo-search .search input[name=search] {
+.wrapper .header .container .head-title-search .search input[name=search] {
   height: 35px;
   border: none;
   outline: none;
@@ -50,8 +58,84 @@ body {
 .wrapper .main-content {
   flex: 1 1 auto;
 }
+.wrapper .main-content .container {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+}
+.wrapper .main-content .container .left-sidebar {
+  margin-right: 20px;
+}
+.wrapper .main-content .container .left-sidebar .category-filter .category-filter-head {
+  margin-bottom: 15px;
+  font-weight: 700;
+}
+.wrapper .main-content .container .left-sidebar .category-filter .category-filter-list {
+  list-style: none;
+}
+.wrapper .main-content .container .left-sidebar .category-filter .category-filter-list .category-filter-item {
+  padding: 5px 10px;
+}
+.wrapper .main-content .container .left-sidebar .category-filter .category-filter-list .category-filter-item a {
+  text-decoration: none;
+  cursor: pointer;
+  display: block;
+}
+.wrapper .main-content .content {
+  max-width: 700px;
+}
 .wrapper .main-content .content .hidden {
   display: none;
+}
+.wrapper .main-content .content .tasks-list ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.wrapper .main-content .content .tasks-list .task-item {
+  padding: 10px;
+  border-bottom: 1px solid gray;
+}
+.wrapper .main-content .content .tasks-list .task-item .task-info {
+  display: flex;
+  justify-content: space-between;
+}
+.wrapper .main-content .content .tasks-list .task-item .task-name {
+  margin-bottom: 10px;
+  font-size: 16px;
+}
+.wrapper .main-content .content .tasks-list .task-item .task-categ-prior {
+  display: flex;
+  font-size: 14px;
+}
+.wrapper .main-content .content .tasks-list .task-item .task-categ-prior .task-category, .wrapper .main-content .content .tasks-list .task-item .task-categ-prior .task-priority, .wrapper .main-content .content .tasks-list .task-item .task-categ-prior .task-exp-date {
+  margin-left: 20px;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 3px;
+}
+.wrapper .main-content .content .tasks-list .task-item .task-buttons {
+  display: flex;
+}
+.wrapper .main-content .content .tasks-list .task-item .task-buttons div {
+  margin-left: 25px;
+  cursor: pointer;
+}
+.wrapper .main-content .content .tasks-list .task-item .task-buttons div img {
+  display: block;
+}
+.wrapper .main-content .content .tasks-list .task-item .task-buttons div img:hover {
+  fill: red;
+}
+.wrapper .main-content .content .tasks-list .task-item .thrown {
+  text-decoration: line-through;
+}
+.wrapper .main-content .content .button-add-task-item {
+  padding: 10px 15px;
+  border-radius: 10px;
+  border: none;
+  background-color: #719191;
+  color: #ffffff;
+  font-weight: 700;
 }
 
 .container {
