--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -1,5 +1,6 @@
 html{
     height: 100%;
+    font-family: Roboto;
 }
 
 body{
@@ -26,15 +27,22 @@ body{
     
     .header{
 
+        margin-bottom: 40px;
+
         .container{
             display: flex;
             justify-content: space-between;
 
-            .head-logo-search{
+            .head-title-search{
                 display: flex;
                 align-items: center;
                 width: 60%;
                 justify-content: space-between;
+
+                .head-title{
+                    font-size: 20px;
+                    font-weight: 700;
+                }
             
                 .search{
                     background-color: #eaf1f1;
@@ -58,13 +66,109 @@ body{
     .main-content{
         flex: 1 1 auto;
 
+        .container{
+            display: grid;
+            grid-template-columns: 1fr 3fr;
+            
+            .left-sidebar{
+                margin-right: 20px;
+
+                .category-filter{
+
+                    .category-filter-head{
+                        margin-bottom: 15px;
+                        font-weight: 700;
+                        
+                    }
+
+                    .category-filter-list{
+                        list-style: none;
+
+                        .category-filter-item{
+                            padding: 5px 10px;
+                            a{
+                                text-decoration: none;
+                                cursor: pointer;
+                                display: block;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
         .content{
+            max-width: 700px;
 
             .hidden{
                 display: none;
             }
 
-            
+            .tasks-list{
+
+                ul{
+                    list-style: none;
+                    padding: 0;
+                    margin: 0;
+                }
+
+                .task-item{
+                    
+                    padding: 10px;
+                    border-bottom: 1px solid gray;
+                    
+                    .task-info{
+                        display: flex;
+                        justify-content: space-between;
+                    }
+
+                    .task-name{
+                        margin-bottom: 10px;
+                        font-size: 16px;
+                    }
+
+                    .task-categ-prior{
+                        display: flex;
+                        font-size: 14px;
+
+                        .task-category, .task-priority, .task-exp-date{
+                            margin-left: 20px;
+                            border: 1px solid black;
+                            border-radius: 5px;
+                            padding: 3px;
+                        }
+                    }
+
+                    .task-buttons{
+                        display: flex;
+
+                        div {
+                            margin-left: 25px;
+                            cursor: pointer;
+
+                            img{
+                                display: block;
+                                &:hover{
+                                    fill: red;
+                                }
+                            }
+                        }
+                    }
+
+                    .thrown{
+                        text-decoration: line-through;
+                    }
+                }
+            }
+
+            .button-add-task-item{
+                padding: 10px 15px;
+                border-radius: 10px;
+                border: none;
+                background-color: #719191;
+                color: #ffffff;
+                font-weight: 700;
+            }
         }
     }
 }
