--- a/views/tasks.ejs
+++ b/views/tasks.ejs
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Noto+Sans:wght@300;400;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/styles/main.css">
     <title>Задания</title>
@@ -16,9 +19,9 @@
     <div class="wrapper">
         <header class="header">
             <div class="container">
-                <div class="head-logo-search">
-                    <div class="head-logo">
-                        Dashboard
+                <div class="head-title-search">
+                    <div class="head-title">
+                        Задачи
                     </div>
                     <div class="search">
                         <input type="text" name="search">
@@ -31,15 +34,28 @@
         </header>  
         <div class="main-content">
             <div class="container">
+                <div class="left-sidebar">
+                    <div class="category-filter">
+                        <div class="category-filter-head">
+                            Категории:
+                        </div>
+                        <div class="category-filter-list">
+
+                        </div>
+                    </div>
+                </div>
                 <div class="content">
                     <div class="tasks-list">
 
                     </div>
                     <div class="button-add-task">
-                        <button type="button" class="button-add-task-item">Добавить задачу</button>
+                        <button type="button" class="button-add-task-item">+ Добавить задачу</button>
                     </div>
                     <form action="" class="add-task hidden">
                         <input type="text" placeholder="Название задачи" name="taskName">
+                        <input type="date" name="expireDate">
+                        <select class="category-list" name="category"></select>
+                        <select class="priority-list" name="priority"></select>
                         <br><button type="button" class="cancel-btn">Отмена</button><button type="submit">Добавить задачу</button>
                     </form>
                 </div>
@@ -52,5 +68,6 @@
         </footer>
     </div>
     <script src="/js/tasks.js"></script>
+    <script type = "text/JavaScript" src = " https://MomentJS.com/downloads/moment.js"></script>
 </body>
 </html>
