--- a/frontend/src/components/TaskItem/taskItem.module.css
+++ b/frontend/src/components/TaskItem/taskItem.module.css
@@ -4,6 +4,10 @@
     border-bottom: 1px solid gray;
 }
 
+.task_item:hover{
+    cursor: pointer;
+}
+
 .task_info {
     display: flex;
     justify-content: space-between;
